syntax = "proto3";

package example;

enum LoginType {
    WEB = 0;
    MOBILE = 1;
}

message UserLogin {
    // The name of the user to greet
    string user_id = 1;
    string user_name = 2;
    LoginType login_type = 3;
}

message UserProfile {
    string name = 1;
    int64 last_seen_delta_ms = 2;
    string login_location = 3;
    int32 seen_count = 4;
}

// A customized response sent to the user
message EgressRecord {
    // The name of the user being greeted
    string topic = 1;
    // The users customized greeting
    string payload = 2;
}
