syntax = "proto3";

package org.apache.flink.statefun.examples.harness;
option java_package = "org.apache.flink.statefun.examples.harness.generated";
option java_multiple_files = true;

// message in
message GreetRequest {
    string who = 1;
}

// message out
message GreetResponse {
    string who = 1;
    string greeting = 2;
}

// state
message SeendCountState {
    int64 seen = 1;
}